Transcode of shared memory stream fails
Using shm access module with transcoding to http output fails to produce valid stream.
I.e.:
cvlc shm:// --shm-file=/home/yuuki/Xvfb_screen0 --shm-fps=2 -vvv --sout='#transcode{vcodec=theo,vb=800,scale=1,acodec=none}:http{mux=ogg,dst=:8080/}'
Produces a lot of messages same as in attached log.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Maintainer
I'm not surprised. VLC sucks at low frame rates.
Patch welcome anyway.
- Rémi Denis-Courmont added Component::Stream output label
added Component::Stream output label
- Maintainer
Actually, something is really broken with the frame size, 128 bytes makes no sense.
Make sure you've set the picture width
- Rémi Denis-Courmont assigned to @Courmisch
assigned to @Courmisch
- Rémi Denis-Courmont added Component::Input: file system label and removed Component::Stream output label
added Component::Input: file system label and removed Component::Stream output label
- Rémi Denis-Courmont changed milestone to %2.0.5
changed milestone to %2.0.5
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
commit 22203a58 Author: Rémi Denis-Courmont remi@remlab.net Date: Tue Oct 16 18:47:35 2012 +0300
shm: fix capture with non page-size frame size (maybe fixes [#7579](https://code.videolan.org/videolan/vlc/-/issues/7579))
Original author: remi@remlab.net
Thanks for fast reaction, but it do not fix issue.
Let me explain full picture. I use Xvfb to make virtual X11 server with framebuffer mapped to file:
Xvfb :1 -screen :1 1024x800x24 -fbdir /home/yuuki &
After that I try to watch this framebuffer using VLC:
vlc shm:// --shm-file /home/yuuki/Xvfb_screen0 --shm-fps 2 --shm-width=1024 --shm-height=800 --shm-depth=32
It works acceptable. Now I try to transcode it and stream out:
cvlc shm:// --shm-file /home/yuuki/Xvfb_screen0 --shm-fps 2 --shm-width=1024 --shm-height=800 --shm-depth=32 :sout='#transcode{vcodec=theo,vb=800,scale=1,acodec=none}:http{mux=ogg,dst=:8080/}' :sout-keep
At this point bunch of "skipped picture" messages appear and no transcoding done.
- yuuki removed Status::fixed label
removed Status::fixed label
- yuuki reopened
reopened
- Maintainer
Sout - not me. Patch welcome.
- Rémi Denis-Courmont unassigned @Courmisch
unassigned @Courmisch
- Rémi Denis-Courmont added Component::Stream output Version::master git labels and removed Component::Input: file system label
added Component::Stream output Version::master git labels and removed Component::Input: file system label
- Rémi Denis-Courmont changed milestone to %Bugs paradize
changed milestone to %Bugs paradize