shm: fix capture with non page-size frame size (maybe fixes #7579)